# ESP32-Library

./: .gitignore  LibraryConfig.h  README.md
01_Flags/: CMakeLists.txt  Flags.c  Flags.h
02_KiemTraInternet/: CMakeLists.txt  KiemTraInternet.cpp  KiemTraInternet.h
02_WIFI/: CMakeLists.txt  Kconfig.projbuild  WIFI.c  WIFI.h
03_CauHinhWiFiTuDong/: CMakeLists.txt
03_POSTGET/: CMakeLists.txt  POSTGET.c  POSTGET.h
04_POSTGET/: CMakeLists.txt  POSTGET.c  component.mk
05_CapNhatFirmwareOTA/: CMakeLists.txt  CapNhatFirmwareOTA.c  CapNhatFirmwareOTA.h
07_DS3231/: CMakeLists.txt  ds3231.h
09_LCD_I2C/: CMakeLists.txt  Kconfig  LCD_I2C.cpp  LCD_I2C.h  README.md
09_ManHinhLCD/: CMakeLists.txt  ManHinhLCD.cpp  ManHinhLCD.h
74HC595/: 74HC595.c  74HC595.h  CMakeLists.txt
ACS712/: ACS712.c  ACS712.cpp  ACS712.h  CMakeLists.txt  esp_adc_library.h
ClassButton/: CMakeLists.txt  ClassButton.cpp
DS3231/: ds3231.c  ds3231.h
HC_SR04/: CMakeLists.txt  HC_SR04.c  HC_SR04.h  Kconfig  README.md
LCD_I2C/: CMakeLists.txt  Kconfig  LCD_I2C.c  LCD_I2C.cpp  LCD_I2C.h  LCD_I2C.hpp  README.md
LORA/: CMakeLists.txt  LORA.c  LORA.h  Lora.c.txt
NetworkCheck/: CMakeLists.txt  NetworkCheck.c  NetworkCheck.cpp  NetworkCheck.h
OTA_Update/: CMakeLists.txt  OTA_Update.c  OTA_Update.h
PCF8574/: CMakeLists.txt  PCF8574.c  PCF8574.cpp  PCF8574.h  PCF8574.hpp
POSTGET/: CMakeLists.txt  POSTGET.c  POSTGET.h
PWM/: CMakeLists.txt  Kconfig  pwm.c  pwm.h
RTC_Format/: CMakeLists.txt  (+2 more)
WiFiManager/: CMakeLists.txt
WiFiManager/src/: dns_server.c  wifi_manager.c  wifi_manager.h
(+15 files in other folders)
